pulldown-cmark-mdcat/tests/snapshots/render/ansi@commonmark-spec-071-atx_headings.snap
---
source: pulldown-cmark-mdcat/tests/render.rs
assertion_line: 123
expression: "render_to_string(markdown_file, &ansi_settings)"
input_file: pulldown-cmark-mdcat/tests/markdown/commonmark-spec/071-atx_headings.md
---
[1m[34m┄┄[0m[1m[34mfoo[0m

[1m[34m┄┄┄[0m[1m[34mbar[0m
